[package]
name = "swc-remove-matched-charset-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
swc_core = { version = "9.0.2", features = ["ecma_plugin_transform"] }
regex = "1.10.6"
serde_json = "1.0.124"
swc_ecma_parser = "6.0.1"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
